1999-07-06  Ken Raeburn  <raeburn@mit.edu>

	* KRB5-asn.py (PA-SAM-RESPONSE): Fix syntax error -- comma
	separating sequence components doesn't belong buried in a
	comment.

1999-07-03  Tom Yu  <tlyu@mit.edu>

	* asn1buf.c (asn1buf_sync): Add length parameter to disambiguate
	constructed-indefinite encoding from constructed-definite encoding
	which happens to end at the same place as the enclosing buf.

	* asn1buf.h: Update to match definition.

	* krb5_decode.c (end_structure): Update to deal with additional
	length parameter to asn1buf_sync().

	* asn1_k_decode.c (end_sequence_of, end_structure): Update to deal
	with additional length parameter to asn1buf_sync().

	* asn1buf.h: New prototpyes for asn1buf_sync() and
	asn1buf_skiptail().

	* asn1buf.c (asn1buf_sync): Fix to deal with
	constructed-indefinite encodings with trailing fields.  As a
	result, this requires that the most recently read tag number be
	passed in.
	(asn1buf_skiptail): New helper function to skip trailing fields in
	a constructed-indefinite encoding.

	* krb5_decode.c (end_structure): Hack to deal with changed
	asn1buf_sync().

	* asn1_k_decode.c (end_structure, end_sequence_of): Hack to deal
	with changed asn1buf_sync().

1999-06-30  Tom Yu  <tlyu@mit.edu>

	* asn1buf.c (asn1buf_sync): Interim fix for DCE compat problem
	with indefinite length encodings.

1999-06-15  Tom Yu  <tlyu@mit.edu>

	* asn1_encode.c (asn1_encode_generaltime): Fix minor bug in
	bounds-checking for tm_year: 1900 + 8099 = 9999.

Mon May 10 15:23:51 1999  Danilo Almeida  <dalmeida@mit.edu>

	* Makefile.in: Do win32 build in subdir.

1998-11-13  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* Makefile.in: Set the myfulldir and mydir variables (which are
		relative to buildtop and thisconfigdir, respectively.)

Thu Dec  3 19:41:06 1998  Tom Yu  <tlyu@mit.edu>


	* asn1_k_decode.c (asn1_decode_krb5_flags): Fix previous to
	properly left-justify bit strings less than 32 bits.
