@@ -1,3 +1,10 @@
+Sat Jul 10 10:21:40 1999  Tom Yu  <chaoself@mit.edu>
+
+	* asn1_decode.c (asn1_decode_integer): Fix to deal with overflows
+ 	and negative integers.
+	(asn1_decode_unsigned_integer): Fix to deal with overflows and to
+ 	return errors on encountering negative integers.
+
 1999-07-06  Ken Raeburn  <raeburn@mit.edu>
 
 	* KRB5-asn.py (PA-SAM-RESPONSE): Fix syntax error -- comma
